--- a/brand.html
+++ b/brand.html
@@ -85,10 +85,10 @@
                 <!-- menu div -->
                 <div class="navbar-collapse collapse" id="a">
                     <ul class="navbar-nav ms-auto text-center">
-                        <li><a href="" class="nav-link">Home</a></li>
-                        <li><a href="" class="nav-link">ABOUT</a></li>
-                        <li><a href="" class="nav-link">BRAND</a></li>
-                        <li><a href="" class="nav-link">OUR TEAM</a></li>
+                        <li><a href="fistfidal.html" class="nav-link">Home</a></li>
+                        <li><a href="about.html" class="nav-link">ABOUT</a></li>
+                        <li><a href="brand.html" class="nav-link">BRAND</a></li>
+                        <li><a href="our team.html" class="nav-link">OUR TEAM</a></li>
                         <li><a href="" class="nav-link">CONTACT</a></li>
                         <li><a href="" class="nav-link">CARRERS</a></li>
                     </ul>
