--- a/about.html
+++ b/about.html
@@ -136,7 +136,9 @@
     <nav class="navbar bg-dark navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
             <a href="" class="navbar-brand">
-                <img src="https://pn-paul.netlify.app/image/ff-logo-02.png" alt="" class="img123">
+                <img src="https://pn-paul.netlify.app/image/ff-logo-02.png" alt="" class="weblogo">
+                <!--mobile logo-->
+                <img src="https://pn-paul.netlify.app/image/logo-for-mobile.png" alt="" class="moblogo">
             </a>
 
             <!--mobile menu-->
@@ -151,6 +153,7 @@
                     <li><a href="about.html" class="nav-link">ABOUT</a></li>
                     <li><a href="brand.html" class="nav-link">BRAND</a></li>
                     <li><a href="our team.html" class="nav-link">OUR TEAM</a></li>
+                    <li><a href="" class="nav-link">PRESS RELEASE</a></li>
                     <li><a href="" class="nav-link">CONTACT</a></li>
                     <li><a href="" class="nav-link">CARRERS</a></li>
                 </ul>
