--- a/brand.html
+++ b/brand.html
@@ -58,7 +58,7 @@
             height: 600px;
         }
 
-        .bakground {
+        .background {
             background: url(image/brand\ bakground.jpg);
             width: 100%;
             height: 600px;
@@ -74,7 +74,9 @@
         <nav class="navbar bg-dark navbar-expand-md navbar-dark fixed-top">
             <div class="container-fluid">
                 <a href="" class="navbar-brand">
-                    <img src="https://pn-paul.netlify.app/image/ff-logo-02.png" alt="" class="img123">
+                    <img src="https://pn-paul.netlify.app/image/ff-logo-02.png" alt="" class="weblogo">
+                    <!--mobile logo-->
+                    <img src="https://pn-paul.netlify.app/image/logo-for-mobile.png" alt="" class="moblogo">
                 </a>
 
                 <!--mobile menu-->
@@ -89,6 +91,7 @@
                         <li><a href="about.html" class="nav-link">ABOUT</a></li>
                         <li><a href="brand.html" class="nav-link">BRAND</a></li>
                         <li><a href="our team.html" class="nav-link">OUR TEAM</a></li>
+                        <li><a href="press release.html" class="nav-link">PRESS RELEASE</a></li>
                         <li><a href="" class="nav-link">CONTACT</a></li>
                         <li><a href="" class="nav-link">CARRERS</a></li>
                     </ul>
@@ -98,7 +101,7 @@
             </div><!--container-fluid end-->
 
         </nav>
-        <div class="container-fluid bakground">
+        <div class="container-fluid background">
 
             <h1 style="color: white; text-align: center; padding-top: 300px; font-size: 42px; font-family: prague;">
                 BRAND</h1>
