--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>contact</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,8 +11,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <style>
-        .img123 {
+        <style>
+            *,::after,::before{
+                box-sizing: border-box;
+            }
+             .weblogo {
             width: 65px;
         }
 
@@ -53,96 +55,17 @@
                 margin-top: 77px;
             }
         }
+        .form-action{
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
 
-        .a {
-            line-height: 35px;
-            letter-spacing: 1px;
-            word-spacing: 1px;
-            padding-right: 5px;
-            text-align: center;
-            text-align: justify;
-        }
-
-        .img123 {}
-
-        .aa {
-            line-height: 40px;
-            letter-spacing: 1px;
-            word-spacing: 1px;
-            padding-right: 5px;
-            margin-top: 200px;
-            text-align: center;
-            font-weight: lighter;
-            padding-bottom: 1px;
-            color: white;
-            font-size: 43px ;
-            text-shadow: 20px;
-            font-size: 1.5cm;
-            margin-top: 7cm;
-            font-family: prague;
-        }
-
-        .game {
-            line-height: 40px;
-            letter-spacing: 1px;
-            word-spacing: 1px;
-
-            margin-top: 30px;
-            text-align: center;
-            font-weight: lighter;
-            padding-bottom: cm;
-            color: white;
-            font-size: 18px;
-
-        }
-
-        .img1 {
-            background: url(image/Plum-21-1349x900.webp);
-            width: 100%;
-            height: 600px;
-
-        }
-
-        .img {
-            background: url(image/1000_F_735158330_fmmrmaAN0iCc8IDji7bwfEBXMqahF1Kq.jpg);
-            width: 100%;
-            height: 500px;
-        }
-
-        .b {
-            padding-top: 20px;
-        }
-
-        .contact {
-            padding-left: ;
-            padding-top: 70px;
-            color: white;
-            font-size: 40px;
-        }
-
-        .bb {
-            line-height: 30px;
-            letter-spacing: 1px;
-            word-spacing: 1px;
-            margin-top: 20px;
-            font-weight: lighter;
-            padding-bottom: 2cm;
-            color: aliceblue;
-            text-align: center;
-            text-align: justify;
-            font-size: 18px;
-
-        }
-
-        .aaa {
-            padding-bottom: cm;
-            text-transform: uppercase;
-            font-family: prague;
-            letter-spacing: 3px;
-        }
-    </style>
+}
+        </style>
 </head>
-
 <body>
     <nav class="navbar bg-dark navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
@@ -165,8 +88,8 @@
                     <li><a href="brand.html" class="nav-link">BRAND</a></li>
                     <li><a href="our team.html" class="nav-link">OUR TEAM</a></li>
                     <li><a href="press release.html" class="nav-link">PRESS RELEASE</a></li>
-                    <li><a href="" class="nav-link">CONTACT</a></li>
-                    <li><a href="" class="nav-link">CARRERS</a></li>
+                    <li><a href="contact.html" class="nav-link">CONTACT</a></li>
+                    <li><a href="carrers.html" class="nav-link">CARRERS</a></li>
                 </ul>
 
             </div>
@@ -174,72 +97,72 @@
         </div><!--container-fluid end-->
 
     </nav>
-    <div class="container-fluid ">
-        <div class="row">
-            <div class="spam img1 ">
-                <h1 class="text-center aa">MEET THE TEAM </h1>
-            </div>
-        </div>
-    </div>
 
-    <br><br>
-    <div class="container">
-
-        <div class="row">
-            <div class="col-md-5 text-center aos-init aos-animate" data-aos="flip-left" data-aos-delay="400"
-                data-aos-duration="2000">
-                <img src="image/about-priyank.jpg" alt="" class="w-100" style="height: 500px;">
-            </div>
-            <div class="col-md-7">
-                <h1>Priyank Sukhija</h1>
-                <h6>C.E.O. & M.D.</h6>
-                <p class="a">A 19-year-old dropout kid, who was just setting up his first venture, envisioned what
-                    nobody thought would make him a business tycoon in the hospitality industry. Once he began, there
-                    was no stopping this entrepreneur from reaching the heights he has reached today. It is the passion
-                    and creative streak of Priyank Sukhija that has made him the most watched-out restaurateur of
-                    today’s time. Coming from a family of lawyers, he ventured into the business world on his own with
-                    Lazeez Affaire in 1999 and has never looked back since.
-                </p>
-                <button style="background-color: orange; border-radius: 5px; font-size: 20px; color: white; border: none;">Read More</button>
-               <br><br>
-                <div class="col-md-6 mb-5">
-                    <a href="https://pn-paul.netlify.app/about#"><i class='bx bxl-facebook-circle' style="color: orange; font-size: 40px;"></i></a>
-                    <a href="https://pn-paul.netlify.app/about#"><i class='bx bxl-instagram' style="color: orange; font-size: 40px;"></i></a>
-                    <a href="https://pn-paul.netlify.app/about#"><i class='bx bxl-whatsapp' style="color: orange; font-size: 40px;"></i></a>
-                </div>
-            </div>
-            
-        </div>
-
-    </div>
-    <br><br><br>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <img src="image/444444.png" alt="" class="w-100" style="margin-top: 0px;">
-                
-            </div>
-            <div class="col-md-4">
-                <img src="image/555555555555555555.jpg" alt="" class="w-100" style="margin-top: 0px; border-style: inset; box-shadow: black;">
-            </div>
-            <div class="col-md-4">
-                <img src="image/666666666666.jpg" alt="" class="w-100" style="margin-top: 0px;">
-            </div>
-
-            </div>
+    <img src="https://img.freepik.com/free-photo/contact-us-communication-support-service-assistance-concept_53876-128103.jpg?w=996&t=st=1724418884~exp=1724419484~hmac=36b5c390e09b3b40372740623d72bd2d196c3e19f3d41dab0aabe121b94ae733" alt=""
+        class="w-100 h-400 imgmob">
+        <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <img src="image/555555555555555555.jpg" alt="" class="w-100" style="margin-top: 20px; border-style: inset; box-shadow: black;">
+                <div class="col-md-6"data-aos="fade-down">
+                    <h4 class="mt-4 mb-4"style="font-family: unset;font-size: 1.5rem; margin-bottom: 0.5rem;
+                    font-weight: lighter;padding-top:25px ;
+                    line-height: 1.2;">SEND US MASSAGE</h4>
+                    <form action>
+                        <div class="mb-3 mt-4">
+                            <input type="name" class="form-action" placeholder="Name*">
+                        </div>
+                        <div class="mb-3 mt-4">
+                            <input type="email" class="form-action" placeholder="Email*">
+                        </div>
+                        <div class="mb-3">
+                            <input type="Phone" class="form-action" placeholder="Phone*">
+                        </div>
+                        <div class="mb-3">
+                            <input type="Massage" class="form-action" placeholder="Massage*">
+                        </div>
+                        <div class="mb-3">
+                            <button class="btn bg-warning btn-lg text-light">submit</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="col-md-4">
-                    <img src="image/666666666666.jpg" alt="" class="w-100" style="margin-top: 20px;">
-                </div> 
-
-
+                <!--col-md-6 end-->
+                <div class="col-md-5 mt-4 ms-1" style=" line-height: 20px;
+                letter-spacing: 1px;
+                word-spacing: 1px;
+                padding-right: 5px;
+                margin-top: 20px;
+                font-weight: lighter;
+                padding-bottom: 2cm;">
+                <h2 class="mt-4 mb-4" style="font-family: unset;font-size: 1.5rem; margin-bottom: 0.5rem;
+                font-weight: lighter;
+                line-height: 1.2;">CONTACT INFO</h2>
+                <h6 style="color: orange;">Address</h6>
+                <p>6, Chanakyapuri Shopping Complex, 48, Malcha Marg, New Delhi 110021</p>
+                <h6 style="color: orange;">For Franchise Enquiry</h6>
+                <p>MOBILE:
+                    <b style="color: orange;">+91 9617737833</b>
+                </p>
+                <p>EMAIL:
+                    <b style="color: orange;">franchise@firstfiddle.in</b>
+                </p>
+                <h6 style="color: orange;">For HR Enquiry</h6>
+                <p>MOBILE:
+                    <b style="color: orange;">+91 9617737833</b>
+                </p>
+                <p>EMAIL:
+                    <b style="color: orange;">hr@firstfiddle.in</b>
+                </p>
+                <h6 style="color: orange;">For Other Enquiry</h6>
+                <p>PHONE:
+                    <b style="color: orange;">9617737833</b>
+                </p>
+                EMAIL:
+                <b style="color: orange;">customercare@firstfiddle.in</b>
+                <p>Open: Monday - saturday 10:30 - 19:30</p>
+                </div>
             </div>
         </div>
-        <br><br>
-        <!--row end-->
+
+         <!--row end-->
 
     <!--2 container div-->
     <!-- 2nd background img end -->
@@ -283,7 +206,7 @@
                 </div>
                 </div>
     </div><!--row end-->
-    <div class="container-fluid" style="background-color: black;width: 100%;">
+    <div class="container-fluid" style="background-color: black; width: 100%;">
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6 text-light">
@@ -293,5 +216,4 @@
     </div>
     </div>
 </body>
-
 </html>
