--- a/fistfidal.html
+++ b/fistfidal.html
@@ -5,8 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <style>
         .img123 {
             width: 80%;
@@ -68,31 +73,183 @@
             /* height: 450px; */
             padding: 120px 100px;
         }
-        footer{
-			background: #020306f0;
+
+        footer {
+            background: #020306f0;
             padding: 50px;
             color: #fff;
-		}
-		footer .img123{
-			margin-top: 30px;
-			width: 50%;
-		}
-		.h22{
-			font-family: 'prague';
+        }
+
+        footer .img123 {
+            margin-top: 30px;
+            width: 50%;
+        }
+
+        .h22 {
+            font-family: 'prague';
             font-size: 2 rem;
             line-height: 50px;
             letter-spacing: 3px;
             color: #fff;
-		}
-		.p1{
-			font-size: 16px;
+        }
+
+        .p1 {
+            font-size: 16px;
             line-height: 28px;
             letter-spacing: 1px;
-		}
+        }
+
+        .img123 {
+            width: 65px;
+        }
+
+        .navbar {
+            background: #00000082 !important;
+        }
+
+        .navbar-nav li {
+            padding: 0 10px;
+        }
+
+        .navbar-nav li a {
+            color: #fff !important;
+            font-weight: 600;
+            font-size: 20px;
+        }
+
+        .moblogo {
+            display: none;
+        }
+
+        @media(max-width:768px) {
+            .weblogo {
+                display: none;
+            }
+
+            .moblogo {
+                display: block;
+
+            }
+
+            .navbar {
+                background: rgb(255, 174, 0) !important;
+            }
+
+            .imgmob {
+                margin-top: 77px;
+            }
+        }
+
+        .a {
+            line-height: 35px;
+            letter-spacing: 1px;
+            word-spacing: 1px;
+            padding-right: 5px;
+            text-align: justify;
+            text-align: center;
+        }
+
+        .img123 {}
+
+        .aa {
+            line-height: 40px;
+            letter-spacing: 1px;
+            word-spacing: 1px;
+            padding-right: 5px;
+            margin-top: 90px;
+            text-align: center;
+            font-weight: lighter;
+            padding-bottom: 1px;
+            color: white;
+            font-size: 43px;
+        }
+
+        .game {
+            line-height: 40px;
+            letter-spacing: 1px;
+            word-spacing: 1px;
+
+            margin-top: 30px;
+            text-align: center;
+            font-weight: lighter;
+            padding-bottom: cm;
+            color: white;
+            font-size: 18px;
+
+        }
+
+        .img {
+            background: url(image/1000_F_735158330_fmmrmaAN0iCc8IDji7bwfEBXMqahF1Kq.jpg);
+            width: 100%;
+            height: 500px;
+        }
+
+        .b {
+            padding-top: 20px;
+        }
+
+        .contact {
+            padding-left: ;
+            padding-top: 70px;
+            color: white;
+            font-size: 40px;
+        }
+
+        .bb {
+            line-height: 30px;
+            letter-spacing: 1px;
+            word-spacing: 1px;
+            margin-top: 20px;
+            font-weight: lighter;
+            padding-bottom: 2cm;
+            color: aliceblue;
+            text-align: center;
+            text-align: justify;
+            font-size: 18px;
+
+        }
+
+        .aaa {
+            padding-bottom: cm;
+            text-transform: uppercase;
+            font-family: prague;
+            letter-spacing: 3px;
+        }
     </style>
 </head>
 
 <body>
+    <nav class="navbar bg-dark navbar-expand-md navbar-dark fixed-top">
+        <div class="container-fluid">
+            <a href="" class="navbar-brand">
+                <img src="https://pn-paul.netlify.app/image/ff-logo-02.png" alt="" class="img123">
+            </a>
+
+            <!--mobile menu-->
+            <button class="navbar-toggler" data-bs-target="#a" data-bs-toggle="collapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- menu div -->
+            <div class="navbar-collapse collapse" id="a">
+                <ul class="navbar-nav ms-auto text-center">
+                    <li><a href="fistfidal.html" class="nav-link">Home</a></li>
+                    <li><a href="about.html" class="nav-link">ABOUT</a></li>
+                    <li><a href="brand.html" class="nav-link">BRAND</a></li>
+                    <li><a href="our team.html" class="nav-link">OUR TEAM</a></li>
+                    <li><a href="" class="nav-link">Press Release</a></li>
+                    <li><a href="" class="nav-link">CONTACT</a></li>
+                    <li><a href="" class="nav-link">CARRERS</a></li>
+                </ul>
+
+            </div>
+
+        </div><!--container-fluid end-->
+
+    </nav>
+
+    <img src="image/FISTEFIDAL.jpg" alt="" class="w-100 h-400 imgmob">
+    <br><br>
     <div class="container">
         <h1 class="a text-center">WELCOME TO <b style="color: orange;">FIRST FIDDLE</b></h1>
         <br>
@@ -112,7 +269,7 @@
 
             </div>
             <div class="col-md-5 text-center">
-                <img src="https://pn-paul.netlify.app/image/first.jpg" alt="" class="img123">
+                <img src="https://pn-paul.netlify.app/image/first.jpg" alt="" class="w-100">
 
             </div>
 
@@ -200,32 +357,58 @@
 
     <footer>
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-5">
-                    <img src="https://pn-paul.netlify.app/image/ff-logo-02.png" class="img123" >
-                    <br><br>
+            <div class="row" style="background-color: #111215;">
+                <div class="col-md-1">
                 </div>
-                <div class="col-md-7">
-                    <h2 class="h22"><span style="color: #ffad00;">CONTACT</span> US</h2>
-                    <p class="p1">We're a team focusing on redefining the way the hospitality industry works by bringing
-                        in concept based restaurants across India. We are truly committed to catering to the
-                        ever-changing cosmopolitan taste of the customer and revolutioning the F & B industry!</p>
+
+                <div class="col-md-3">
+                    <img src="image/logo-01.webp" style="width: 80%; margin-top: 2cm;" alt="">
+                </div>
+                <div class="col-md-1"></div>
+                <div class="col-md-6">
+                    <h1 class="aaa text-light mt-4"><span style="color: orange;">CONTACT</span><span> US</span></h1>
+                    <p style=" line-height: 30px;
+                    word-spacing: 1px;
+                    font-size: 18px;
+                    color: aliceblue;">We're a team focusing on redefining the way the hospitality industry works by
+                        bringing in concept based restaurants across India. We are truly committed to catering to the
+                        ever-changing cosmopolitan taste of the customer and revolutioning the F &amp; B industry!</p>
                     <div class="row">
                         <div class="col-md-6">
-                            <h2>adderes</h2>
-                            <p>S-357 2nd floor, Block S, Panchsheel Park South, Panchsheel Park,
-                                New Delhi, Delhi 110017</p>
+                            <h6 class="aaa" style="color: orange;">Address</h6>
+                            <p class="text-light">S-357 2nd floor, Block S, Panchsheel Park South, Panchsheel Park, New
+                                Delhi, Delhi 110017</p>
                         </div>
-                        <div class="col-md-6">
-                            <h2>for enqury</h2>
-                            <a href="mailto:email.com;digvijaykaurav@gmail.com"></a>
-                        </div>
-                    </div><!--row end-->
+                         <div class="col-md-6">
+                            <h6 class="aaa" style="color: orange;">Enquiry</h6>
+                            <p class="text-light" style="margin-bottom: 3cm;">Email: <b
+                                    style="color: orange; font-weight: 400;">customercare@firstfiddle.in</b></p>
 
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 mb-5">
+                                <a href="https://pn-paul.netlify.app/about#"><i class='bx bxl-facebook-circle'
+                                        style="color: orange; font-size: 40px;"></i></a>
+                                <a href="https://pn-paul.netlify.app/about#"><i class='bx bxl-instagram'
+                                        style="color: orange; font-size: 40px;"></i></a>
+                                <a href="https://pn-paul.netlify.app/about#"><i class='bx bxl-whatsapp'
+                                        style="color: orange; font-size: 40px;"></i></a>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div><!--row end-->
-
-        </div><!--container-fluid end-->
+            <div class="container-fluid" style="background-color: black; width: 100;">
+                <div class="row">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-6 text-light">
+                        <p class="col-mt-3" style="width: 250;">EMPLOYEE POLICIES |PRIVACY POLICY |TERMS AND CONDITIONS
+                            | BLOG | APP <b style="font-weight: 250; margin-left: 2.5cm;">COPYRIGHT © 2021 FIRST FIDDLE
+                                F&amp;B PRIVATE LIMITED</b></p>
+                    </div>
+                </div>
+            </div>
     </footer>
 
 </body>
